--- a/ogptest/index.html
+++ b/ogptest/index.html
@@ -5,11 +5,52 @@
 <title>ogptest</title>
 </head>
 <body>
-<h1>ogptest</h1>
+
+<h2>cards-player-samples</h1>
+
 <hr>
 
 <p>
-<a href="./sample01.html">sample01</a>
+clone by <a href="https://github.com/twitterdev/cards-player-samples">here</a>
+</p>
+
+<p>
+copy by <a href="https://github.com/orinbou/cards-player-samples">here</a>
+</p>
+
+<hr>
+
+<p>
+<a href="./player/page.html"></a>
+</p>
+
+<p>
+<a href="./player/container.html">container.html</a>
+</p>
+
+<p>
+<a href="./player/example.png">example.png</a>
+</p>
+
+<p>
+<a href="./player/example.mp4">example.mp4</a>
+</p>
+
+
+<h1>my-samples</h1>
+
+<hr>
+
+<p>
+<a href="./sample01.html">sample01</a> by mp4
+</p>
+
+<p>
+<a href="./sample02.html">sample02</a> by mp4
+</p>
+
+<p>
+<a href="./sample03.html">sample03</a> by youtube( https://www.youtube.com/watch?v=nFLIoQWdlbM )
 </p>
 
 </body>
