Add more samples

--- a/ogptest/index.html
+++ b/ogptest/index.html
@@ -6,7 +6,15 @@
 </head>
 <body>
 
-<h2>cards-player-samples</h1>
+<h1>Card validator</h1>
+
+<p>
+<a href="https://cards-dev.twitter.com/validatorl"></a>
+</p>
+
+<hr>
+
+<h1>cards-player-samples</h1>
 
 <hr>
 
@@ -42,15 +50,19 @@ copy by <a href="https://github.com/orinbou/cards-player-samples">here</a>
 <hr>
 
 <p>
-<a href="./sample01.html">sample01</a> by mp4
+<a href="./sample01.html">sample01</a> by mp4 file
 </p>
 
 <p>
-<a href="./sample02.html">sample02</a> by mp4
+<a href="./sample02.html">sample02</a> by mp4 file
 </p>
 
 <p>
 <a href="./sample03.html">sample03</a> by youtube( https://www.youtube.com/watch?v=nFLIoQWdlbM )
+</p>
+
+<p>
+<a href="./sample04.html">sample04</a> by youtube( https://www.youtube.com/watch?v=nFLIoQWdlbM )
 </p>
 
 </body>
