--- a/ogptest/index.html
+++ b/ogptest/index.html
@@ -8,8 +8,10 @@
 
 <h1>Card validator</h1>
 
+<hr>
+
 <p>
-<a href="https://cards-dev.twitter.com/validatorl"></a>
+<a href="https://cards-dev.twitter.com/validatorl">here</a>
 </p>
 
 <hr>
@@ -62,7 +64,15 @@ copy by <a href="https://github.com/orinbou/cards-player-samples">here</a>
 </p>
 
 <p>
-<a href="./sample04.html">sample04</a> by youtube( https://www.youtube.com/watch?v=nFLIoQWdlbM )
+<a href="./sample04.html">sample04</a> by ndldc2( https://dl.ndl.go.jp/info:ndljp/pid/3570295 ) org
+</p>
+
+<p>
+<a href="./sample05.html">sample05</a> by ndldc2( https://dl.ndl.go.jp/info:ndljp/pid/3570295 ) og & twitter
+</p>
+
+<p>
+<a href="./sample06.html">sample06</a> by ndldc2( https://dl.ndl.go.jp/info:ndljp/pid/3570295 ) og & twitter
 </p>
 
 </body>
