--- a/ogptest/index.html
+++ b/ogptest/index.html
@@ -72,7 +72,7 @@ copy by <a href="https://github.com/orinbou/cards-player-samples">here</a>
 </p>
 
 <p>
-<a href="./sample06.html">sample06</a> by ndldc2( https://dl.ndl.go.jp/info:ndljp/pid/3570295 ) og & twitter
+<a href="./sample06.html">sample06</a> by ndldc2( https://dl.ndl.go.jp/info:ndljp/pid/3570295 ) og & twitter more
 </p>
 
 </body>
