--- a/ogptest/index.html
+++ b/ogptest/index.html
@@ -75,5 +75,9 @@ copy by <a href="https://github.com/orinbou/cards-player-samples">here</a>
 <a href="./sample06.html">sample06</a> by ndldc2( https://dl.ndl.go.jp/info:ndljp/pid/3570295 ) og & twitter more
 </p>
 
+<p>
+<a href="./sample07.html">sample07</a> by ndldc2( https://dl.ndl.go.jp/info:ndljp/pid/3570295 ) og & twitter less
+</p>
+
 </body>
 </html>
