--- a/ogptest/sample07.html
+++ b/ogptest/sample07.html
@@ -10,7 +10,8 @@
 	<meta property="og:url" content="https://dl.ndl.go.jp/info:ndljp/pid/3570295">
 	<meta property="og:image" content="https://dl.ndl.go.jp/titleThumb/info:ndljp/pid/3570295">
 
-	<meta name="twitter:image" content="https://dl.ndl.go.jp/titleThumb/info:ndljp/pid/3570295">
+	<meta name="twitter:card" content="player">
+
 	<meta name="twitter:player" content="https://dl.ndl.go.jp/info:ndljp/pid/3570295">
 </head>
 
