--- a/ogptest/sample07.html
+++ b/ogptest/sample07.html
@@ -13,6 +13,8 @@
 	<meta name="twitter:card" content="player">
 
 	<meta name="twitter:player" content="https://dl.ndl.go.jp/info:ndljp/pid/3570295">
+	<meta name="twitter:player:width" content="1280">
+	<meta name="twitter:player:height" content="720">
 </head>
 
 <body>
