--- a/ogptest/index.html
+++ b/ogptest/index.html
@@ -79,5 +79,9 @@ copy by <a href="https://github.com/orinbou/cards-player-samples">here</a>
 <a href="./sample07.html">sample07</a> by ndldc2( https://dl.ndl.go.jp/info:ndljp/pid/3570295 ) og & twitter less
 </p>
 
+<p>
+<a href="./sample08.html">sample08</a> by ndldc2( https://docs.theoplayer.com/getting-started/01-sdks/01-web/03-how-can-we-embed-iframe.md ) og & twitter less
+</p>
+
 </body>
 </html>
