Add theoplayer samples

--- a/ogptest/index.html
+++ b/ogptest/index.html
@@ -87,5 +87,13 @@ copy by <a href="https://github.com/orinbou/cards-player-samples">here</a>
 <a href="./sample09.html">sample09</a> by ndldc2( https://docs.theoplayer.com/getting-started/01-sdks/01-web/03-how-can-we-embed-iframe.md ) og & twitter less
 </p>
 
+<p>
+<a href="./sample10.html">sample10</a> by video/elephants-dream/playlist.m3u8( https://orinbou.github.io/ogptest/theoplayer.html ) og & twitter less
+</p>
+
+<p>
+<a href="./sample11.html">sample11</a> by media-convert/output/8842542_26001.m3u8( https://orinbou.github.io/ogptest/theoplayer.html ) og & twitter less
+</p>
+
 </body>
 </html>
