--- a/ogptest/index.html
+++ b/ogptest/index.html
@@ -11,7 +11,7 @@
 <hr>
 
 <p>
-<a href="https://cards-dev.twitter.com/validatorl">here</a>
+<a href="https://cards-dev.twitter.com/validator">here</a>
 </p>
 
 <hr>
