--- a/ogptest/index.html
+++ b/ogptest/index.html
@@ -95,5 +95,9 @@ copy by <a href="https://github.com/orinbou/cards-player-samples">here</a>
 <a href="./sample11.html">sample11</a> by media-convert/output/8842542_26001.m3u8( https://orinbou.github.io/ogptest/theoplayer.html ) og & twitter less
 </p>
 
+<p>
+<a href="./sample12.html">sample12</a> by media-convert/output/8842542_26001.m3u8( https://cdn.theoplayer.com/demos/iframe/theoplayer.html ) og & twitter less
+</p>
+
 </body>
 </html>
