--- a/ogptest/index.html
+++ b/ogptest/index.html
@@ -103,5 +103,9 @@ copy by <a href="https://github.com/orinbou/cards-player-samples">here</a>
 <a href="./sample13.html">sample13</a> by media-convert/output/8842542_26001.m3u8( https://orinbou.github.io/ogptest/theoplayer2.html ) og & twitter less
 </p>
 
+<p>
+<a href="./sample14.html">sample14</a> by video/elephants-dream/playlist.m3u8( https://orinbou.github.io/ogptest/theoplayer2.html ) og & twitter less
+</p>
+
 </body>
 </html>
