--- a/ogptest/index.html
+++ b/ogptest/index.html
@@ -107,5 +107,13 @@ copy by <a href="https://github.com/orinbou/cards-player-samples">here</a>
 <a href="./sample14.html">sample14</a> by video/elephants-dream/playlist.m3u8( https://orinbou.github.io/ogptest/theoplayer2.html ) og & twitter less
 </p>
 
+<p>
+<a href="./sample15.html">sample15</a> by video/elephants-dream/playlist.m3u8( https://orinbou.github.io/ogptest/theoplayer2.html ) og & twitter less SD
+</p>
+
+<p>
+<a href="./sample16.html">sample16</a> by video/elephants-dream/playlist.m3u8( https://orinbou.github.io/ogptest/theoplayer2.html ) og & twitter less HD
+</p>
+
 </body>
 </html>
