--- a/ogptest/index.html
+++ b/ogptest/index.html
@@ -115,5 +115,9 @@ copy by <a href="https://github.com/orinbou/cards-player-samples">here</a>
 <a href="./sample16.html">sample16</a> by video/elephants-dream/playlist.m3u8( https://orinbou.github.io/ogptest/theoplayer2.html ) og & twitter less HD
 </p>
 
+<p>
+<a href="./sample17.html">sample17</a> by video/elephants-dream/playlist.m3u8( https://orinbou.github.io/ogptest/theoplayer2.html ) og & twitter less SW
+</p>
+
 </body>
 </html>
