add html5 video samples

--- a/hlstest/sample11.html
+++ b/hlstest/sample11.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>hlstest</title>
+<title>動画</title>
 </head>
 <body>
 
@@ -11,13 +11,7 @@
 <hr>
 
 <p>
-<a href="./sample11.html">sample動画（html5 video）</a>
-</p>
-
-<hr>
-
-<p>
-<a href="./sample21.html">sample音声（html5 video）</a>
+<video src="https://stg.dl.ndl.go.jp/contents/14991231/test_movie/bitrate_0500k/video_hls.m3u8" controls></video>
 </p>
 
 </body>
