add hls.js video samples

--- a/hlstest/index.html
+++ b/hlstest/index.html
@@ -14,10 +14,18 @@
 <a href="./sample11.html">sample動画（html5 video）</a>
 </p>
 
+<p>
+<a href="./sample12.html">sample動画（hls.js video）</a>
+</p>
+
 <hr>
 
 <p>
 <a href="./sample21.html">sample音声（html5 video）</a>
+</p>
+
+<p>
+<a href="./sample22.html">sample動画（hls.js video）</a>
 </p>
 
 </body>
