--- a/hlstest/sample22.html
+++ b/hlstest/sample22.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>動画</title>
+<title>音声</title>
 </head>
 <body>
 
