--- a/hlstest/index.html
+++ b/hlstest/index.html
@@ -25,7 +25,7 @@
 </p>
 
 <p>
-<a href="./sample22.html">sample動画（hls.js video）</a>
+<a href="./sample22.html">sample音声（hls.js video）</a>
 </p>
 
 </body>
