add next sound sample

--- a/hlstest/index.html
+++ b/hlstest/index.html
@@ -28,5 +28,11 @@
 <a href="./sample22.html">sample音声（hls.js video）</a>
 </p>
 
+<hr>
+
+<p>
+<a href="./sample32.html">sample音声（hls.js video）</a>
+</p>
+
 </body>
 </html>
