Add new samples.

--- a/hlstest/index.html
+++ b/hlstest/index.html
@@ -11,21 +11,29 @@
 <hr>
 
 <p>
-<a href="./sample11.html">sample動画（html5 video）</a>
+    <a href="./sample11.html">sample動画（html5 video）</a>
 </p>
 
 <p>
-<a href="./sample12.html">sample動画（hls.js video）</a>
+    <a href="./sample12.html">sample動画（hls.js video）</a>
 </p>
 
 <hr>
 
 <p>
-<a href="./sample21.html">sample音声（html5 video）</a>
+    <a href="./sample21.html">sample音声（html5 video）</a>
 </p>
 
 <p>
-<a href="./sample22.html">sample音声（hls.js video）</a>
+    <a href="./sample22.html">sample音声（hls.js video）</a>
+</p>
+
+<p>
+    <a href="./sample23.html">sample動画（hls.js video）1→30fps, 960x720</a>
+</p>
+
+<p>
+    <a href="./sample24.html">sample動画（hls.js video）30→1fps, 960x720</a>
 </p>
 
 <hr>
